# misaka-test-net

./: README.md
misaka-core-v4/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  check
misaka-core-v4/.cargo/: README.md  config.linux.toml.example
misaka-core-v4/.github/workflows/: ci.yaml  ci.yml  feature-safety.yml  release.yml
misaka-core-v4/configs/: chain.json  prometheus.yml  testnet.toml
misaka-core-v4/crates/misaka-api/: Cargo.toml
misaka-core-v4/crates/misaka-api/src/: explorer_frontend.html  main.rs  middleware.rs
misaka-core-v4/crates/misaka-cli/: Cargo.toml
misaka-core-v4/crates/misaka-cli/src/: keygen.rs  main.rs  public_transfer.rs  send.rs
misaka-core-v4/crates/misaka-cli/tests/: e2e_transfer.rs
misaka-core-v4/crates/misaka-config/src/: lib.rs  node_config.rs  toml_config.rs  validation.rs
misaka-core-v4/crates/misaka-consensus/src/: block_validation.rs  committee.rs  economic_finality.rs  equivocation_detector.rs  finality.rs  staking.rs  validator_rewards.rs
misaka-core-v4/crates/misaka-consensus/tests/: e2e_pipeline.rs  pipeline_test.rs
misaka-core-v4/crates/misaka-crypto/src/: hashes.rs  keystore.rs  signature.rs  validator_sig.rs
misaka-core-v4/crates/misaka-dag/: Cargo.toml
misaka-core-v4/crates/misaka-dag/src/: lib.rs
misaka-core-v4/crates/misaka-dag/tests/: narwhal_crash_recovery.rs  narwhal_proptest.rs  rocksdb_crash_recovery.rs
misaka-core-v4/crates/misaka-execution/src/: block_apply.rs
misaka-core-v4/crates/misaka-governance/src/: lib.rs
misaka-core-v4/crates/misaka-mempool/src/: lib.rs  reconciliation.rs
misaka-core-v4/crates/misaka-mining/src/: mass.rs
misaka-core-v4/crates/misaka-node/: Cargo.toml
misaka-core-v4/crates/misaka-node/src/: block_producer.rs  config_validation.rs  dag_narwhal_dissemination_service.rs  dag_p2p_network.rs  dag_p2p_transport.rs  dag_rpc_legacy.rs  dag_tx_dissemination_service.rs  genesis_committee.rs  identity.rs  main.rs  narwhal_block_relay_transport.rs  narwhal_consensus.rs  narwhal_runtime_bridge.rs  rpc_auth.rs  rpc_rate_limit.rs  rpc_server.rs  solana_stake_verify.rs  sr21_election.rs  utxo_executor.rs  validator_api.rs
misaka-core-v4/crates/misaka-notify/tests/: notify_tests.rs
misaka-core-v4/crates/misaka-p2p/: Cargo.toml
misaka-core-v4/crates/misaka-p2p/src/: flow_context.rs  message_validation.rs  narwhal_block_relay.rs  peer_manager.rs  router.rs  secure_transport.rs
misaka-core-v4/crates/misaka-pqc/src/: key_derivation.rs  lib.rs  pq_kem.rs  pq_sign.rs
misaka-core-v4/crates/misaka-protocol-config/src/: lib.rs
misaka-core-v4/crates/misaka-rpc/src/: auth.rs  service_impl.rs
misaka-core-v4/crates/misaka-security/src/: constant_time.rs  sanitize.rs
misaka-core-v4/crates/misaka-simulator/src/: lib.rs
misaka-core-v4/crates/misaka-storage/: Cargo.toml
misaka-core-v4/crates/misaka-storage/src/: encryption.rs  quarantine_store.rs  utxo_set.rs  wal.rs
misaka-core-v4/crates/misaka-test-cluster/src/: lib.rs
misaka-core-v4/crates/misaka-tokenomics/src/: block_reward.rs  reward.rs  supply.rs
misaka-core-v4/crates/misaka-txscript/src/: script_engine.rs
misaka-core-v4/crates/misaka-types/src/: capability.rs  constants.rs  error.rs  genesis.rs  intent.rs  lib.rs  mcs1.rs  pq_kem_compat.rs  quarantine.rs  scheme.rs  seed_entry.rs  transaction.rs  utxo.rs
misaka-core-v4/crates/misaka-utils/: Cargo.toml
misaka-core-v4/crates/misaka-utils/src/: hash.rs  sysinfo.rs
misaka-core-v4/dashboards/grafana/: misaka-consensus-deep.json  misaka-overview.json
misaka-core-v4/distribution/public-node/: README.md  start-public-node.bat  start-public-node.command  start-public-node.sh
misaka-core-v4/distribution/public-node/config/: genesis_committee.toml  public-node.toml  registered_validators.json  seed-pubkeys.txt  seeds.txt
misaka-core-v4/docker/: Dockerfile  docker-compose.yml  node-compose.yml
misaka-core-v4/docs/: BASELINE.md  README.md  TESTNET_DEPLOY_GUIDE.md  TESTNET_MANIFEST.json  TESTNET_QUICKSTART.md  VALIDATOR_GUIDE.md  architecture.md  consensus-migration.md  round_tracking.md  whitepaper_errata.md
misaka-core-v4/docs/api/: openapi.yaml
misaka-core-v4/docs/architecture/: CONSENSUS_LAYERS.md
misaka-core-v4/docs/audit/: AUDIT_BRIDGE_R2.md  AUDIT_FINALIZER_EQUIV.md  AUDIT_MEMPOOL_R2.md  AUDIT_P2P_R2.md  AUDIT_R2_SUMMARY.md  AUDIT_RPC_R2.md  AUDIT_STORAGE_R2.md  AUDIT_TOKENOMICS_R2.md  R4_REGRESSIONS.md  R5_BRIDGE_STATUS.md  R6_P2P_STATUS.md  R7_STORAGE_STATUS.md  SELF_AUDIT_v90.md  VULNERABILITY_CHECK_v0514.md  coverage-baseline.md
misaka-core-v4/docs/audit/R3/: AUDIT_BRIDGE.md  AUDIT_CONFIGS.md  AUDIT_MEMPOOL.md  AUDIT_P2P.md  AUDIT_PQ_PRIVACY.md  AUDIT_RPC.md  AUDIT_STORAGE.md  AUDIT_TOKENOMICS.md  (+1 more)
misaka-core-v4/docs/consensus/: ARCHITECTURE.md  SUI_DIFF.md
misaka-core-v4/docs/design/: BLOCK_SIGNATURE_PIPELINE.md  BRIDGE_PQ_MIGRATION.md  CHAIN_BINDING.md  COMMIT_SUBSYSTEM_DECOMPOSITION.md  FINALITY_LAYERS.md  STATE_ROOT_WIRING.md  VALIDATOR_IDENTITY.md  VM_ROADMAP.md  commit_finalizer.md  hybrid_signature.md  leader_scoring.md  tx_certifier.md
misaka-core-v4/docs/feature-status/: MAINNET_v1.0.md
misaka-core-v4/docs/ops/: INCIDENT_RESPONSE.md  SLO.md  UPGRADE_PROCEDURE.md  VALIDATOR_RUNBOOK.md
misaka-core-v4/docs/refactor/: BLOCK_VERIFIER_TEST_PATH.md  COMMIT_FINALIZER_GAP.md  CONSENSUS_DEDUP_INVENTORY.md  CORE_ENGINE_RESPONSIBILITY.md  DAG_RPC_INVENTORY.md  EQUIVOCATION_GRANULARITY.md  EXPECT_AUDIT.md  NODE_DECOMPOSITION.md  STUB_INVENTORY.md
misaka-core-v4/docs/support/: INQUIRY_OBSERVER_RECONNECT.ja.md
misaka-core-v4/frontend/: tx.html
misaka-core-v4/frontend/explorer/: package-lock.json  package.json  tailwind.config.ts
misaka-core-v4/scripts/: dag_natural_restart_harness.sh  dag_rolling_restart_soak_harness.sh  dag_three_validator_recovery_harness.sh  package_public_node.py  register_validator_example.py  register_validator_example.sh  start-node.sh  start-phase-c-committee-rehearsal.sh  start-testnet.sh  testnet-deploy.sh  testnet-join.sh
misaka-core-v4/scripts/lib/: native_toolchain.sh
(+92 files in other folders)
