[package]
name = "misaka-api"
description = "MISAKA Network — Public REST API server"
version = "0.1.0"
edition = "2021"
license = "Proprietary"

[[bin]]
name = "misaka-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "limit", "trace"] }
tower = { version = "0.4", features = ["limit", "util"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
chrono = "0.4"
async-trait = "0.1"
url = "2"
misaka-types = { path = "../misaka-types" }

[features]
default = []
# SEC-FIX-2: Swagger UI from external CDN — dev only.
# Production builds MUST NOT enable this (supply-chain risk).
swagger-cdn = []
