[package]
name = "misaka-utils"
description = "Shared utilities: hashing, networking, rate limiting, memory management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
sha3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
indexmap = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
